# calimero-client-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  MERODOX_TESTING.md  MIGRATION_SUMMARY.md  MODULAR_STRUCTURE.md  Makefile  NEW_CLIENT_GUIDE.md  README.md  TESTING.md  build.sh  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-wheels.yml  ci.yml
abi-codegen/: pyproject.toml
abi-codegen/examples/generated_client/: __init__.py  client.py  types.py
abi-codegen/src/calimero_abi_codegen/: __init__.py  cli.py  generator.py  parser.py  type_mapper.py
bindings/: BUILD_STATUS.md  README.md  STANDALONE_BUILD.md  build-venv.fish  build-venv.sh  build.sh  test-crates-api.sh  test-python.py
bindings/src/: python.rs
calimero/: __init__.py  cli.py  client.py  config.py  json_rpc_client.py  keypair.py  types.py  ws_subscriptions_client.py
calimero/admin/: __init__.py  alias.py  application.py  blob.py  capability.py  context.py  identity.py  proposal.py  system.py
data/admin-test-1/admin-test-1/: config.toml
data/admin-test-1/admin-test-1/data/: IDENTITY  LOG  LOG.old.1755797899052874  LOG.old.1755797921170973  LOG.old.1755797934918044  LOG.old.1755797970502014  LOG.old.1755797984200600  MANIFEST-000025
data/cali-e2e-1/cali-e2e-1/: config.toml
data/cali-e2e-1/cali-e2e-1/data/: IDENTITY  LOG  LOG.old.1755767473776305  MANIFEST-000009  OPTIONS-000011
data/calimero-node-1/calimero-node-1/: config.toml
data/calimero-node-1/calimero-node-1/blobs/: Bu11916ZHiuXhpw5dc8kBBBK8tMufj9t3kX9e4H8Gic2  FLEWxFN7JBrmUWV4UWUtb2pmRmUEZu1SE6p2pswBSim9
data/calimero-node-1/calimero-node-1/data/: 000024.sst  000025.sst  000027.sst  000028.sst  000035.sst  000036.sst  000038.sst  000039.sst  000046.sst  000047.sst  000049.sst  000050.sst  000057.sst  000058.sst  000060.sst  000061.sst  000076.sst  000077.sst  000079.sst  000080.sst  000089.sst  000090.sst  000092.sst  000093.sst  000100.sst  000101.sst  000103.sst  000104.sst  000113.sst  000114.sst  000116.sst  000117.sst  000129.sst  000130.sst  000132.sst  000133.sst  000142.sst  000143.sst  000145.sst  000146.sst  (+51 more)
data/calimero-node-2/calimero-node-2/: config.toml
data/calimero-node-2/calimero-node-2/data/: 000024.sst  000025.sst  000027.sst  000028.sst  000029.sst  000030.sst  000035.sst  000036.sst  000038.sst  000039.sst  000044.sst  000045.sst  000047.sst  000048.sst  000053.sst  000054.sst  000056.sst  000057.sst  000069.sst  000070.sst  000072.sst  000073.sst  000080.sst  000081.sst  000083.sst  000084.sst  000089.sst  000090.sst  000092.sst  000093.sst  000098.sst  000099.sst  000101.sst  000102.sst  000110.sst  000111.sst  000113.sst  000114.sst  000121.sst  000122.sst  (+51 more)
docs/: aliases.html  architecture.html  client.html  connection.html  index.html  namespaces.html  nav.js  rpc.html  types.html
examples/: README.md  kv_store_example.py  kv_store_ws_example.py  onlypeers_get_all_posts.py  run_example.sh  run_kv_store.sh
scripts/: build.sh
src/: client.rs  connection.rs  python.rs  storage.rs  token.rs
tests/: conftest.py  test_admin_client_e2e.py  test_application_workflows.py  test_basic.py  test_basic_functionality.py  test_config.py  test_context_workflows.py  test_execute_workflows.py  test_identity_workflows.py  test_integration_simple.py  test_json_rpc_client.py  test_keypair.py  test_token_persistence.py  test_ws_subscriptions_client.py
tests/workflows/: workflow-example.yml
