[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "calimero-client-py"
version = "0.2.2"
description = "Python client SDK for Calimero Network"
authors = [{name = "Calimero Network", email = "support@calimero.network"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "websockets>=12.0",
    "base58>=2.1.1",
    "pydantic>=2.5.0",
    "aiohttp>=0.9.0",
    "toml>=0.10.2",
    "pynacl>=1.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio>=0.26.0",
    "merobox>=0.1.0",
    "black",
    "pre-commit",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v -s --tb=short --capture=no"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.maturin]
features = ["python"]
module-name = "calimero_client_py_bindings"
python-packages = ["calimero_client_py_bindings"]
python-modules = ["calimero_client_py_bindings"]
manifest-path = "bindings/Cargo.toml"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
